MC1160-Fix odd spacing when nested menu is open on mobile

--- a/ui/reuse/client/src/components/sideTrowserBase/sideTrowserBase.scss
+++ b/ui/reuse/client/src/components/sideTrowserBase/sideTrowserBase.scss
@@ -10,7 +10,6 @@
  */
 
 .sideTrowserBase {
-    position: relative;
     height: 100%;
     width: 100%;
 
